--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="app-container">
     <h1>Hello Expo.</h1>
     <p>Bienvenue dans la version de démonstration web de CoachIAApp.</p>
-    <a href="https://wwww.msprods.fr" target="_blank">Retour vers msprods.fr</a>
+    <a href="https://www.msprods.fr" target="_blank">Retour vers msprods.fr</a>
   </div>
 </body>
 </html>
