--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
     <p>Bienvenue dans la version de démonstration web de CoachIAApp.</p>
     <a href="https://www.msprods.fr" target="_blank">Retour vers msprods.fr</a>
   </div>
+
+  <div class="buttons">
+    <a href="app.js" download>Télécharger App.js</a>
+    <a href="https://expo.dev/@mariamsanoko/coachiaapp" target="_blank">Voir la démo sur Expo</a>
+  </div>
 </body>
 </html>
