--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div class="buttons">
     <a href="app.js" download>Télécharger App.js</a>
-    <a href="https://expo.dev/@mariamsanoko/coachiaapp" target="_blank">Voir la démo sur Expo</a>
+    <a href="#" target="_blank">Voir la démo sur Expo</a>
   </div>
 
   <pre><code id="code" class="language-js"></code></pre>
