--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CoachIAApp – Aperçu du code</title>
+  <title>CoachIAApp – index.tsx</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" />
   <style>
     body {
@@ -45,23 +45,24 @@
   </style>
 </head>
 <body>
-  <h1>CoachIAApp – Fichier App.js</h1>
+  <h1>CoachIAApp – Aperçu index.tsx</h1>
 
   <div class="buttons">
-    <a href="app.js" download>Télécharger App.js</a>
-    <a href="#" target="_blank">Voir la démo sur Expo</a>
+    <a href="./coach-ia/app/(tabs)/index.tsx" download>Télécharger index.tsx</a>
+    <a href="https://expo.dev/@mariamsanoko/coachiaapp" target="_blank">Voir sur Expo</a>
   </div>
 
-  <pre><code id="code" class="language-js"></code></pre>
+  <pre><code id="code" class="language-tsx"></code></pre>
 
   <footer>
     © 2025 Mariam Sanoko – CoachIAApp | Propulsé par GitHub Pages ✨
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-javascript.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-typescript.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-jsx.min.js"></script>
   <script>
-    fetch('app.js')
+    fetch('index.tsx')
       .then(res => res.text())
       .then(text => {
         const codeEl = document.getElementById('code');
