--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h1>CoachIAApp – Aperçu index.tsx</h1>
 
   <div class="buttons">
-    <a href="./coach-ia/app/(tabs)/index.tsx" download>Télécharger index.tsx</a>
+    <a href="index.tsx" download>Télécharger index.tsx</a>
     <a href="https://expo.dev/@mariamsanoko/coachiaapp" target="_blank">Voir sur Expo</a>
   </div>
 
