--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
   <h1>CoachIAApp – Aperçu index.tsx</h1>
 
   <div class="buttons">
-    <a href="index.tsx" download>Télécharger index.tsx</a>
+    <a href="app/tabs/index.tsx" download>Télécharger index.tsx</a>
     <a href="https://expo.dev/@mariamsanoko/coachiaapp" target="_blank">Voir sur Expo</a>
   </div>
 
   <pre><code id="code" class="language-tsx"></code></pre>
-
+/
   <footer>
     © 2025 Mariam Sanoko – CoachIAApp | Propulsé par GitHub Pages ✨
   </footer>
